# easy-3dgs

./: .gitignore  .gitmodules  README.md  pyproject.toml  run_pipeline.py  test.py
examples/: dense_full_pipeline.py  full_pipeline.py
src/easy_3dgs/pipeline/: __init__.py  gaussian_splatting_pipeline.py  orchestrator.py  sfm_pipeline.py
src/easy_3dgs/pipeline/feature_matching/: base.py  hloc_implementation.py
src/easy_3dgs/pipeline/gaussian_splatting/: simple_trainer.py
src/easy_3dgs/pipeline/gaussian_splatting/datasets/: colmap.py
src/easy_3dgs/pipeline/image_undistortion/: pycolmap_implementation.py
src/easy_3dgs/pipeline/reconstruction/: hloc_implementation.py
src/easy_3dgs/pipeline/resizer_image/: __init__.py  base.py  imagemagick_implementation.py  pillow_implementation.py
