[project]
name = "easy-3dgs"
version = "0.1.0"
description = "A Python library that includes an end-to-end 3D Gaussian splatting pipeline without requiring the compilation of hundreds of dependencies." 
readme = "README.md"
authors = [
    { name = "jourdelune", email = "jourdelune863@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pycolmap>=3.11.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["easy_3dgs*", "easy_3dgs.third_party.Hierarchical-Localization.hloc*"]

[tool.setuptools.package-data]
"easy_3dgs" = ["third_party/Hierarchical-Localization/hloc/third_party/*"]

[dependency-groups]
dev = [
    "easy-3dgs",
]
