[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
run-setuptools = true
sdist-excludes = ["src/easy_3dgs/third_party/"]

[project]
name = "easy-3dgs"
version = "0.1.0"
description = "A Python library that includes an end-to-end 3D Gaussian splatting pipeline without requiring the compilation of hundreds of dependencies." 
readme = "README.md"
authors = [
    { name = "jourdelune", email = "jourdelune863@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "gsplat>=1.5.2",
    "hloc @ git+https://github.com/Jourdelune/Hierarchical-Localization.git",
    "imageio>=2.37.0",
    "nerfview",
    "opencv-python>=4.11.0.86",
    "pdm>=2.25.4",
    "pdm-backend>=2.4.5",
    "Pillow>=10.0.0",
    "pycolmap==3.10.0",
    "pycolmap-ext @ git+https://github.com/Jourdelune/pycolmap_ext.git",
    "pytorch-msssim>=1.0.0",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.7.0",
    "splines>=0.3.3",
    "tensorboard>=2.19.0",
    "torch>=2.7.1",
    "torchmetrics>=1.7.3",
    "tyro>=0.9.26",
    "viser>=0.2.23",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["easy_3dgs*"]
exclude = [
    "easy_3dgs.third_party*",
]



[dependency-groups]
dev = [
    "easy-3dgs",
]
